Fix card alignment

--- a/src/components/news/news.scss
+++ b/src/components/news/news.scss
@@ -1,8 +1,8 @@
 .news_article_container {
   display: flex;
   flex-wrap: wrap;
-  margin-right: 5%;
-  margin-left: 5%;
+  margin-right: 8%;
+  margin-left: 8%;
 }
 .news-card {
   width: 500px;
